tests/ui/diagnostic-not-implemented-into-bytes.nightly.stderr
error[E0277]: the trait bound `NotZerocopy: IntoBytes` is not satisfied
  --> $DIR/diagnostic-not-implemented-into-bytes.rs:16:24
   |
16 |     takes_into_bytes::<NotZerocopy>();
   |                        ^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `IntoBytes` is not implemented for `NotZerocopy`
  --> $DIR/../include.rs:15:5
   |
15 |     pub struct NotZerocopy<T = ()>(pub T);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: Consider adding `#[derive(IntoBytes)]` to `NotZerocopy`
   = help: the following other types implement trait `IntoBytes`:
             ()
             AU16
             AtomicBool
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
           and 68 others
note: required by a bound in `takes_into_bytes`
  --> $DIR/diagnostic-not-implemented-into-bytes.rs:20:24
   |
20 | fn takes_into_bytes<T: IntoBytes>() {}
   |                        ^^^^^^^^^ required by this bound in `takes_into_bytes`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
